k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - changeit.com
    secretName: frappe-bench-erpnext-tls
  rules:
  - host: "changeit.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frappe-bench-erpnext
            port:
              number: 8080
